# codex-job-agent-system

./: .gitignore  README.md  SKILL.md  app.py  pyproject.toml  requirements.txt
agents/: openai.yaml
job_agent/: __init__.py  models.py
job_agent/agent/: orchestrator.py
job_agent/config/: scoring.py
job_agent/cv/: __init__.py  parser.py
job_agent/generation/: __init__.py  drafter.py
job_agent/jobs/: __init__.py  collectors.py  normalizer.py
job_agent/matching/: __init__.py  scorer.py
job_agent/storage/: sqlite_store.py
references/: architecture.md  data-contracts.md
tests/: test_pipeline.py
