[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-job-agent-system"
version = "0.1.0"
description = "Streamlit and Python job hunting agent for CV parsing, job matching, and grounded CV drafting."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "streamlit>=1.32",
  "scikit-learn>=1.3",
  "pymupdf>=1.23",
  "python-docx>=1.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
openai = [
  "openai>=1.30",
]

[tool.setuptools.packages.find]
include = ["job_agent*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
